# Lyndows

./: .gitignore  .sourcery.yaml  MANIFEST.in  README.md  pyproject.toml
docs/: meson.build
docs/sources/: conf.py  index.rst
docs/sources/story/: intro.md
src/lyndows/: confighelper.py  display.py  dist.py  fileutil.py  path.py  program.py  subprocess.py  system.py  util.py  widget.py  wine.py
src/lyndows/wine/: context.py  dist.py  prefix.py  session.py
tests/: test_path.py
