[build-system]
requires = ["setuptools>=52", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lyndows"
description = "Wine utility library."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ['chardet', 'psutil', 'python-xlib']
keywords = ['wine', 'proton']
classifiers = [
  "Development Status :: 1 - Dev",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/gravures/lyndows"
Source = "https://github.com/gravures/lyndows"

[tool.setuptools_scm]
write_to = "src/lyndows/_version.py"
root = "."
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools]
platforms = ["Windows", "macOS", "Linux"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
  "tomli",
  "sphinx",
  "sphinxcontrib-apidoc",
  "myst-parser",
  "furo @ git+https://github.com/gravures/furo.git@gravures",
]
test = ["pytest"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 99
select = [
  'B',      # flake8-bugbear
  'C4',     # flake8-comprehensions
  'C9',     # mccabe
  'E',      # pycodestyle
  'F',      # pyflakes
  'W',      # pycodestyle
  'RUF100', # ruff
]
exclude = ['docs/conf.py']

[tool.ruff.mccabe]
max-complexity = 12

[tool.coverage.run]
disable_warnings = ['couldnt-parse']

[tool.coverage.html]
show_contexts = true
